# atomic-redis-streams

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/atomic_redis_streams/: __init__.py  consumer.py  exceptions.py  persistable.py  transaction.py
tests/: test_end_to_end.py
