[project]
name = "atomic-redis-streams"
version = "0.1.0"
description = "Crash-safe, stateful processing on top of Redis Streams"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "André Silva", email = "andre.olivais@gmail.com" }]
keywords = ["redis", "streams", "consumer", "transactions", "exactly-once"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/imandresilva/atomic-redis-streams"
Repository = "https://github.com/imandresilva/atomic-redis-streams"
Issues = "https://github.com/imandresilva/atomic-redis-streams/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=7.1.0",
    "testcontainers[redis]>=3.7",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_redis_streams"]
